--- a/Pronia/Areas/Manage/Views/Category/Create.cshtml
+++ b/Pronia/Areas/Manage/Views/Category/Create.cshtml
@@ -7,7 +7,7 @@
         <div class="form-group">
             <label asp-for="Name">Name</label>
             <input asp-for="Name" class="form-control">
-            <span></span>
+            <span asp-validation-for="Name"></span>
 
         </div>
 
